objects/OF_CQS_Ispezione__c.object
<CustomObject>
    <fields>
        <fullName>CQS_IspQ_Chiusino_compl_piano_calpestio__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <label>Chiusino complanare piano calpestio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_Chiusino_conf_sp_tecniche__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>Il chiusino è conforme alle specifiche tecniche</inlineHelpText>
        <label>Chiusino	conforme specifiche tecniche</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_Conformita_stoccaggio_materiali__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>Conformità dello stoccaggio dei materiali, anche sciolti su sedime pubblico e/o privato</inlineHelpText>
        <label>Conformità stoccaggio materiali</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_Corretta_cilindr_rullo_compr__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>Corretta cilindratura del rullo compressore</inlineHelpText>
        <label>Corretta cilindratura rullo compressore</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_Corretta_fratturazione_pozzetto__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <label>Corretta fratturazione pozzetto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_DPI_previsti_indossati__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>I lavoratori indossano i DPI previsti dall’attività</inlineHelpText>
        <label>DPI previsti per attività indossati</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_Esec_foro_muro_perim_edificioOK__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <label>Esecuzione foro muro perim edificio OK</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_Eseguita_sabbiatura_manto_usura__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>E&apos; eseguita la sabbiatura sul manto si usura</inlineHelpText>
        <label>Eseguita sabbiatura manto usura</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_Etichette_identificative_cavo1__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <label>Etichette identificative del cavo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_Etichette_identificative_cavo2__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <label>Etichette identificative del cavo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_Firma_DL__c</fullName>
        <label>Firma DL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CQS_IspQ_Fondo_scavo_pulito__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>Il fondo dello scavo risulta pulito</inlineHelpText>
        <label>Fondo scavo pulito</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_Identif_tipi_rifiuti_presenti__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>Identificazione delle tipologie dei rifiuti presenti, in caso di deposito temporaneo.</inlineHelpText>
        <label>Identificazione tipi rifiuti presenti</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_Ingresso_al_building_posaOK__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>Ingresso al building: posa a regola d’arte su muro/soffitto di tubo/canaletta mediante fissaggio con materiale accessori, staffe, collari, scatole di derivazione</inlineHelpText>
        <label>Ingresso al building posa OK</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_Ingresso_building_esecuzione_OK__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>Ingresso al building: esecuzione a regola d’arte di forature, sigillature e ripristini dei muri interni di qualsiasi natura nella tratta d’ingresso all’edificio fino al punto di installazione del PTE</inlineHelpText>
        <label>Ingresso al building: esecuzione OK</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_Ingresso_minitu_pozz_prot_mono__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>L&apos;ingresso dei minitubi nel pozzetto è adeguatamente protetto da monotubo</inlineHelpText>
        <label>Ingresso minitubi pozz protetto monotubo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_Iscr_Albo_Gest_Ambientali_MUD__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <label>Iscrizione Albo Gestori Ambientali/MUD</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_Larghezza_scavo_conforme__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>La larghezza dello scavo è conforme a Norma Tecnica/Istruzioni/Progetto</inlineHelpText>
        <label>Larghezza scavo conforme</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_Malta_sigilla_ingr_monotubi__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>L&apos;ingresso dei monotubi nei pozzetti è sigillato sia internamente che esternamente tramite malta cementizia</inlineHelpText>
        <label>Malta cementizia sigilla ingr monotubi</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_Manto_stradale_ripristinato_OK__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>Il manto stradale è ripristinato correttamente</inlineHelpText>
        <label>Manto strad ripristinato correttamente</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_Manto_usura_ripristinato_OK__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>Il manto di usura è ripristinato correttamente</inlineHelpText>
        <label>Manto usura ripristinato correttamente</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_Marcatura_chiusini_NT_Istr_Prog__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <label>Marcatura chiusini come NT/Istr/Prog</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_Mat_conformi_spec_tec_OF__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>Materiali conformi a specifiche tecniche di OF (cavi, fender, armadi, pozzetti ecc...)</inlineHelpText>
        <label>Materiali Conformi Specifiche Tec OF</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_Mat_riempimento_conforme_spec__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>Il materiale di riempimento è conforme alle specifiche (200-250 kg/mc)</inlineHelpText>
        <label>Materiale riempimento conforme spec</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_Mat_trasp_discarica_autorizz__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>Il materiale di risulta è trasportato a discarica autorizzata</inlineHelpText>
        <label>Materiale trasportato discarica autorizz</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_Minitubi_posati_in_modo_idoneo__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>I minitubi sono posati in modo idoneo (senza intersezioni e incroci)</inlineHelpText>
        <label>Minitubi posati in modo idoneo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_N_tubi_posati_conformi_progetto__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>I tubi/minitubi posati sono per numero conformi a quanto previsto da progetto</inlineHelpText>
        <label>N°mini/tubi posati conformi per progetto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_No_diff_quota_p_strad_riem_sc__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>Il riempimento dello scavo non presenta differenze di quota dal piano stradale</inlineHelpText>
        <label>No diff quota p strad riempimento scavo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_NotPrel_xmesso_enti_CartelloCar__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <label>NotificaPrel e permesso enti su Cartello</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_Opere_finitura_pavimentazioneOK__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>Opere di finitura della pavimentazione, mediante battitura, sigillatura e stuccatura con idonei materiali bituminosi e cementizi</inlineHelpText>
        <label>Opere finitura della pavimentazione OK</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_PTE_correttamente_staffato__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <label>Il PTE è correttamente staffato</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_Permessi_rilasciati_con_deroghe__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>Permessi rilasciati dai Soggetti preposti (Comune, Enti Locali, Sovrintendenza, STB, ecc) comprensivi di eventuali deroghe alle prescrizioni vigenti (verifica scadenza)</inlineHelpText>
        <label>Permessi rilasciati comprensivi deroghe</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_Posa_opera_conglom_mezzo_vibrof__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>Posa in opera del conglomerato mezzo vibrofinitrice</inlineHelpText>
        <label>Posa in op conglom mezzo vibrofinitrice</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_Posiz_PFS_conf_NT_prog_prescr__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>Il PFS è posizionato conformemente a quanto previsto dalle NT /progetto o dalle prescrizioni ricevute</inlineHelpText>
        <label>Posizione PFS conforme a NT/prog/prescr</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_Pozzetto_conf_sp_tecniche__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>Il pozzetto è conforme alle specifiche tecniche</inlineHelpText>
        <label>Pozzetto conforme specifiche tecniche</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_Pres_lic_autotrasp_conto_3i__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>Presenza eventuali licenze autotrasportatori conto terzi</inlineHelpText>
        <label>Pres licenze autotrasportatori conto 3i</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_Presenza_Progetto_lancio_noDig__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <label>Presenza Progetto di lancio no-dig</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_Presenza_planimetrie_entige__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <label>Presenza planimetrie enti gestori</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_Presenza_planimetrie_georadar__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <label>Presenza planimetrie georadar</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_Profondita_scavo_conforme__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>La profondità dello scavo è conforme a Norma Tecnica/Istruzioni/Progetto</inlineHelpText>
        <label>Profondità scavo conforme</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_Prog_aggiornato_x_lavorazioni__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <label>Progetto aggiornato relativo lavorazioni</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_Pulizia_ok_postLav_NT_Istr__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <description>come NT/Istruzioni</description>
        <inlineHelpText>Pulizia idonea al termine delle lavorazioni, come da NT/Istruzioni</inlineHelpText>
        <label>Pulizia idonea post lavorazioni NT/Istr</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_Pulizia_post_lav_NT_Istr_OK_LT__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>Pulizia idonea al termine delle lavorazioni, come da NT/Istruzioni</inlineHelpText>
        <label>Pulizia post lavorazioni NT/Istr OK</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_Rientro_monotubo_pozzetto_OK__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>Il monotubo entra nel pozzetto per 10cm (5cm nel caso di pozzetti 40x75, 40x40)</inlineHelpText>
        <label>Rientro monotubo nel pozzetto OK</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_Ripr_1_2tempo_conf_NT_Istr_Prog__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>Conformità del ripristino di primo o secondo tempo come da NT/Istruzioni/Progetto</inlineHelpText>
        <label>Ripristino I/II t conforme NT/Istr/Prog</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_Ripr_segnaletica_orizz_vert__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>Ripristino segnaletica orizzontale e verticale</inlineHelpText>
        <label>Ripristino segnaletica orizz/vert</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_Risp_NT_ingr_tub_nel_basamento__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>L&apos;ingresso della tubazioni nel basamento rispetta le NT</inlineHelpText>
        <label>Rispetto NT ingr tubazioni nel basamento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_Rispetto_NT_scorte_minicavo__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>La sistemazione delle scorte di minicavo rispetta le NT</inlineHelpText>
        <label>Rispetto NT sistemazione scorte minicavo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>